// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot trip 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100%;"
        />
        <div
          class="container"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
              name="Start ride"
              type="button"
            >
              Start ride
            </button>
            <button
              class="button"
              name="Book ride"
              type="button"
            >
              Book ride
            </button>
          </div>
          <section>
            <h2>
              Trip Information
            </h2>
            <p>
              Trip Duration: undefined ms
            </p>
            <div
              class="wrapper"
            >
              <div
                class="info"
              >
                <div
                  class="image"
                >
                  <img
                    alt="Robert"
                    src="https://robohash.org/1234?size=50x50"
                  />
                </div>
                <div
                  class="car"
                >
                  <img
                    alt="car mode"
                    src="./images/van.svg"
                  />
                </div>
                <div>
                  <p
                    class="highlighted"
                  >
                    Herbert Patton
                    <span
                      class="rate"
                    >
                      <span
                        aria-label="rating"
                        role="img"
                      >
                        ⭐️
                      </span>
                      5.0
                    </span>
                  </p>
                  <p>
                    Toyato HiAce - GA 2770
                  </p>
                </div>
              </div>
              <div
                class="destination"
              >
                <span>
                   New Cairo
                </span>
                <span>
                   Nasr City
                </span>
              </div>
              <dl
                class="about"
              >
                <div>
                  <dt>
                    <span
                      aria-label="location"
                      role="img"
                    >
                      📍
                    </span>
                    Trip Distance:
                  </dt>
                  <dd>
                     KM
                  </dd>
                </div>
                <div>
                  <dt>
                    <span
                      aria-label="fare"
                      role="img"
                    >
                      💵
                    </span>
                    Trip Fare:
                  </dt>
                  <dd>
                    45 EGP
                  </dd>
                </div>
              </dl>
            </div>
          </section>
          <section>
            <h2>
              Bookings
            </h2>
            <ul
              class="list"
            />
          </section>
        </div>
      </div>
    </div>
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100%;"
      />
      <div
        class="container"
      >
        <div
          class="buttons"
        >
          <button
            class="button"
            name="Start ride"
            type="button"
          >
            Start ride
          </button>
          <button
            class="button"
            name="Book ride"
            type="button"
          >
            Book ride
          </button>
        </div>
        <section>
          <h2>
            Trip Information
          </h2>
          <p>
            Trip Duration: undefined ms
          </p>
          <div
            class="wrapper"
          >
            <div
              class="info"
            >
              <div
                class="image"
              >
                <img
                  alt="Robert"
                  src="https://robohash.org/1234?size=50x50"
                />
              </div>
              <div
                class="car"
              >
                <img
                  alt="car mode"
                  src="./images/van.svg"
                />
              </div>
              <div>
                <p
                  class="highlighted"
                >
                  Herbert Patton
                  <span
                    class="rate"
                  >
                    <span
                      aria-label="rating"
                      role="img"
                    >
                      ⭐️
                    </span>
                    5.0
                  </span>
                </p>
                <p>
                  Toyato HiAce - GA 2770
                </p>
              </div>
            </div>
            <div
              class="destination"
            >
              <span>
                 New Cairo
              </span>
              <span>
                 Nasr City
              </span>
            </div>
            <dl
              class="about"
            >
              <div>
                <dt>
                  <span
                    aria-label="location"
                    role="img"
                  >
                    📍
                  </span>
                  Trip Distance:
                </dt>
                <dd>
                   KM
                </dd>
              </div>
              <div>
                <dt>
                  <span
                    aria-label="fare"
                    role="img"
                  >
                    💵
                  </span>
                  Trip Fare:
                </dt>
                <dd>
                  45 EGP
                </dd>
              </div>
            </dl>
          </div>
        </section>
        <section>
          <h2>
            Bookings
          </h2>
          <ul
            class="list"
          />
        </section>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot trip 1 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100%;"
        />
        <div
          class="container"
        >
          <div
            class="buttons"
          >
            <button
              class="button"
              disabled=""
              name="Start ride"
              type="button"
            >
              Start ride
            </button>
            <button
              class="button"
              disabled=""
              name="Book ride"
              type="button"
            >
              Book ride
            </button>
          </div>
          <section>
            <h2>
              Trip Information
            </h2>
            <p>
              Trip Duration: undefined ms
            </p>
            <div
              class="wrapper"
            >
              <div
                class="info"
              >
                <div
                  class="image"
                >
                  <img
                    alt="Robert"
                    src="https://robohash.org/1234?size=50x50"
                  />
                </div>
                <div
                  class="car"
                >
                  <img
                    alt="car mode"
                    src="./images/van.svg"
                  />
                </div>
                <div>
                  <p
                    class="highlighted"
                  >
                    Herbert Patton
                    <span
                      class="rate"
                    >
                      <span
                        aria-label="rating"
                        role="img"
                      >
                        ⭐️
                      </span>
                      5.0
                    </span>
                  </p>
                  <p>
                    Toyato HiAce - GA 2770
                  </p>
                </div>
              </div>
              <div
                class="destination"
              >
                <span>
                   New Cairo
                </span>
                <span>
                   Nasr City
                </span>
              </div>
              <dl
                class="about"
              >
                <div>
                  <dt>
                    <span
                      aria-label="location"
                      role="img"
                    >
                      📍
                    </span>
                    Trip Distance:
                  </dt>
                  <dd>
                     KM
                  </dd>
                </div>
                <div>
                  <dt>
                    <span
                      aria-label="fare"
                      role="img"
                    >
                      💵
                    </span>
                    Trip Fare:
                  </dt>
                  <dd>
                    45 EGP
                  </dd>
                </div>
              </dl>
            </div>
          </section>
          <section>
            <h2>
              Bookings
            </h2>
            <ul
              class="list"
            />
          </section>
        </div>
      </div>
    </div>
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100%;"
      />
      <div
        class="container"
      >
        <div
          class="buttons"
        >
          <button
            class="button"
            disabled=""
            name="Start ride"
            type="button"
          >
            Start ride
          </button>
          <button
            class="button"
            disabled=""
            name="Book ride"
            type="button"
          >
            Book ride
          </button>
        </div>
        <section>
          <h2>
            Trip Information
          </h2>
          <p>
            Trip Duration: undefined ms
          </p>
          <div
            class="wrapper"
          >
            <div
              class="info"
            >
              <div
                class="image"
              >
                <img
                  alt="Robert"
                  src="https://robohash.org/1234?size=50x50"
                />
              </div>
              <div
                class="car"
              >
                <img
                  alt="car mode"
                  src="./images/van.svg"
                />
              </div>
              <div>
                <p
                  class="highlighted"
                >
                  Herbert Patton
                  <span
                    class="rate"
                  >
                    <span
                      aria-label="rating"
                      role="img"
                    >
                      ⭐️
                    </span>
                    5.0
                  </span>
                </p>
                <p>
                  Toyato HiAce - GA 2770
                </p>
              </div>
            </div>
            <div
              class="destination"
            >
              <span>
                 New Cairo
              </span>
              <span>
                 Nasr City
              </span>
            </div>
            <dl
              class="about"
            >
              <div>
                <dt>
                  <span
                    aria-label="location"
                    role="img"
                  >
                    📍
                  </span>
                  Trip Distance:
                </dt>
                <dd>
                   KM
                </dd>
              </div>
              <div>
                <dt>
                  <span
                    aria-label="fare"
                    role="img"
                  >
                    💵
                  </span>
                  Trip Fare:
                </dt>
                <dd>
                  45 EGP
                </dd>
              </div>
            </dl>
          </div>
        </section>
        <section>
          <h2>
            Bookings
          </h2>
          <ul
            class="list"
          />
        </section>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
